- Controller   * changed flash notice
- View
  * added call to notice helper

- Locales
  * added new translations

--- a/app/views/computers/show.html.erb
+++ b/app/views/computers/show.html.erb
@@ -1,3 +1,4 @@
+<%= notice %>
 <%= render :partial => 'computer_info' %>
 <% content_tag :div, :id => 'right-content' do %>
   <%= link_to  t('common_actions.download_pdf'),
