- Controller   * added flash notice value
- Views
  * changes to show notice advice
  * little changes to show notice advice

--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -3,6 +3,8 @@
   <%= link_to t('common_actions.download_all'), :controller => 'computers', :action => 'xls_computers' %>
 <% end %>
 
+<%= notice %>
+
 <%= content_tag('br') %>
 <%= render :partial => 'list' %>
 
