--- a/app/views/layouts/harddisks.html.erb
+++ b/app/views/layouts/harddisks.html.erb
@@ -6,26 +6,14 @@
 
         <%= render :partial => 'shared/menu' %>
 
-      <div id="content">
+        <div id="content">
 
-        <%= render :partial => 'shared/primary_content' %>
+          <%= render :partial => 'search' %>
 
-        <div id="secondaryContent">
-          <% if controller.action_name != 'edit' && controller.action_name != 'show' &&
-             controller.action_name != 'new' && controller.action_name != 'create' %>
-          <div class="box boxB">
-            <div class="boxContent">
-              <%= render :partial => 'search' %>
-            </div>
-          </div>
-          <% else %>
-          <div class="box boxB">
-            <div class="boxContent">
-              <h2><%= controller.controller_name%> : <%= controller.action_name %></h2>
-            </div>
-          </div>
-          <% end %>
-        </div>
+          </tr>
+
+          <%= yield %>
+
         <div class="clear"></div>
       </div>
 
