- Controller   * add order in find method of marks   * added new method search to show results of search     of bills by code
- Partial
  * added new partial search for bill module

- View
  * added new view search

- Layout
  * refactoring

- Routes
  * added routes to response search requests for bills

--- a/app/views/layouts/bills.html.erb
+++ b/app/views/layouts/bills.html.erb
@@ -9,6 +9,8 @@
       <%= render :partial => 'shared/menu' %>
 
       <div id="content">
+        <%= render :partial => 'search' %>
+
         <%= render :partial => 'selector_companies' %>
 
         <%= yield %>
