- Layouts   * little changes

--- a/app/views/layouts/computers.html.erb
+++ b/app/views/layouts/computers.html.erb
@@ -6,11 +6,12 @@
 
       <%= render :partial => 'shared/menu' %>
 
+      <div id="content">
         <%= yield  %>
 
-      <div class="clear"></div>
-      <%= render :partial => 'shared/footer' %>
-
+        <div class="clear"></div>
+        <%= render :partial => 'shared/footer' %>
+      </div>
     </div>
   </body>
 </html>
