--- a/app/views/marks/_search.html.erb
+++ b/app/views/marks/_search.html.erb
@@ -1,18 +1,18 @@
 <%= javascript_include_tag :defaults %>
 
-<table>
-  <% form_tag :action => 'search' do %>
-  <tr>
-    <td><label>Model:</label></td>
-    <td><%= text_field_with_auto_complete :cd, :model, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
-    <% end %>
-  </tr>
-  <tr>
+<% content_tag :table do %>
+  <% content_tag :tr do %>
     <% form_tag :action => 'search' do %>
-    <td><label>Serial Number:</label></td>
-    <td><%= text_field_with_auto_complete :cd, :serialnumber, {:size => 20}, {:method => :get} %></td>
-    <td><%= submit_tag "Search" %></td>
-  </tr>
+    <% content_tag :td do %>
+      <%= t('marks.mark') %>
+    <% end %>
+    <% content_tag :td do %>
+       <%= text_field_with_auto_complete :mark, :name,
+           {:size => 20}, {:method => :get} %>
+    <% end %>
+    <% content_tag :td do %>
+      <%= content_tag('td', submit_tag(t('search.label'))) %>
+    <% end %>
   <% end %>
-</table>
+  <% end %>
+<% end %>
