--- a/app/views/harddisks/show.html.erb
+++ b/app/views/harddisks/show.html.erb
@@ -1,3 +1,35 @@
+<%= notice %>
+
+<% content_tag :div, :id => 'show' do %>
+
+
+<%= content_tag('h4', t('marks.mark')) %>
+<%= content_tag('p',@harddisk.mark.name) %>
+
+<%= content_tag('h4', t('harddisks.model')) %>
+<%= content_tag('p',@harddisk.model) %>
+
+<%= content_tag('h4',t('harddisks.sn')) %>
+<%= content_tag('p',@harddisk.serialnumber) %>
+
+<% content_tag :div do %>
+  <%= content_tag('h4', t('harddisks.size')) %>
+  <%= content_tag('span',@harddisk.size) %>
+  <%= content_tag('span',@harddisk.unit.nil? ? '-' : @harddisk.unit.to_s)  %>
+<% end %>
+
+<%= content_tag('h4',t('menu.computers')) %>
+<%= content_tag('p',@harddisk.computer.nil? ?
+    '-': link_to(@harddisk.computer.name , '/computers/' +
+    @harddisk.computer.id.to_s)) %>
+
+<%= content_tag('h4',t('harddisks.bill')) %>
+<%= content_tag('p', @harddisk.bill_id.nil? ?
+    '-' : link_to(t('harddisks.bill'),
+    '/bills/'+ @harddisk.bill_id.to_s)) %>
+
+<% end %>
+
 
 <%= link_to t('common_actions.edit'), edit_harddisk_path(@harddisk) %> |
 <%= link_to t('common_actions.back'), harddisks_path %>
