--- a/app/views/screens/show.html.erb
+++ b/app/views/screens/show.html.erb
@@ -1,3 +1,17 @@
+<%= notice %>
+
+<% content_tag :div, :id => 'show' do %>
+
+<%= content_tag('h4', t('screens.model')) %>
+<%= content_tag('p', @screen.model) %>
+
+<%= content_tag('h4', t('screens.mark')) %>
+<%= content_tag('p', @screen.mark.name) %>
+
+<%= content_tag('h4', t('places.title')) %>
+<%= content_tag('p', @screen.place.title) %>
+
+<% end %>
 
 <%= link_to t('common_actions.edit'), edit_screen_path(@screen) %> |
 <%= link_to t('common_actions.back'), screens_path %>
