--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -1,3 +1,39 @@
+<%= notice %>
+
+<% content_tag :div, :id => 'show' do %>
+
+<%= content_tag('h4', t('memories.model')) %>
+<%= content_tag('p', @memory.model) %>
+
+<%= content_tag('h4', t('memories.mark')) %>
+<%= content_tag('p', @memory.mark.name) %>
+
+<%= content_tag('h4',t('memories.sn')) %>
+<%= content_tag('p',@memory.serialnumber) %>
+
+<% content_tag :div do %>
+  <%= content_tag('h4', t('memories.size')) %>
+  <%= content_tag('span',@memory.size) %>
+  <%= content_tag('span',@memory.unit.nil? ? '-' : @memory.unit.to_s)  %>
+<% end %>
+
+
+<%= content_tag('h4',t('menu.computers')) %>
+
+<%= content_tag('p',@memory.computer.nil? ?
+    '-': link_to(@memory.computer.name , '/computers/' +
+    @memory.computer.id.to_s)) %>
+
+<%= content_tag('h4',t('memories.bill')) %>
+<%= content_tag('p', @memory.bill_id.nil? ?
+    '-' : link_to(t('memories.bill'),
+    '/bills/'+ @memory.bill_id.to_s)) %>
+
+
+
+
+
+<% end %>
 
 <%= link_to t('common_actions.edit'), edit_memory_path(@memory) %> |
 <%= link_to t('common_actions.back'), memories_path %>
