--- a/app/views/cds/show.html.erb
+++ b/app/views/cds/show.html.erb
@@ -1,3 +1,23 @@
+<%= notice %>
+
+<% content_tag :div, :id => 'show' do %>
+
+<%= content_tag('h4', t('cds.model')) %>
+<%= content_tag('p', @cd.model) %>
+
+<%= content_tag('h4', t('cds.mark')) %>
+<%= content_tag('p', @cd.mark.name) %>
+
+<%= content_tag('h4',t('cds.sn')) %>
+<%= content_tag('p',@cd.serialnumber) %>
+
+<%= content_tag('h4',t('menu.computers')) %>
+
+<%= content_tag('p',@cd.computer.nil? ?
+    '-': link_to(@cd.computer.name , '/computers/' +
+    @cd.computer.id.to_s)) %>
+
+<% end %>
 
 <%= link_to t('common_actions.edit'), edit_cd_path(@cd) %> |
 <%= link_to t('common_actions.back'), cds_path %>
