--- a/app/views/workstations/_form.html.erb
+++ b/app/views/workstations/_form.html.erb
@@ -31,7 +31,7 @@
 <br>
 <% end %>
 
-<% content_tag :table do %>
+<% content_tag :table, option = {:width => '50%', :cellspacing => '20px'} do %>
   <% content_tag :tr do %>
 
     <% content_tag :td, option = {:valign =>'top'} do %>
