--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -3,7 +3,8 @@
 
   <% content_tag :div, :id => 'quarter' do %>
   <%= t('bill.company') %>
-  <%= collection_select 'bill', 'company_id', Company.find(:all), 'id', 'name',
+  <%= collection_select 'bill', 'company_id',
+      Company.find(:all, :select => 'name,id', :order => 'name ASC'), 'id', 'name',
       {:prompt => true} %>
   <% end %>
 
