- Vendor   * added plugin geokit-rails
- Model
  * added method to show addres of company in one way
  * changed validations for addres

- Migration
  * added migration that change data for companies adding
    street, number, city and country field and deleting address

- Config
  * added gmaps_api_key and geokit_config in intitializers

- Library
  * adding new library to have countries array

- Partials
  * modified partials to show adecuate data for companies

- View
  * modified partials to show adecuate data for companies

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,31 +1,36 @@
 <% form_for(@company) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= t('company.name') %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= t('company.address') %><br />
-    <%= f.text_field :address %>
-  </p>
-  <p>
-    <%= t('company.phone') %><br />
-    <%= f.text_field :phone %>
-  </p>
-  <p>
-    <%= t('company.fax') %><br />
-    <%= f.text_field :fax %>
-  </p>
-  <p>
-    <%= t('company.email') %><br />
-    <%= f.text_field :email %>
-  </p>
+    <p>
+     <%= t('company.name') %><br />
+     <%= f.text_field :name %>
+    </p>
+    <p>
+     <%= t('company.address') %><br />
+     <%= f.text_field :street %>
+     <%= f.text_field :number %>
+     <%= f.text_field :city %>
+    </p>
 
-  <% if action_name == 'new' %>
-  <%= f.submit t('company.create') %>
-  <% else %>
-  <%= f.submit t('company.edit') %>
-  <% end %>
+    <%= select(:company, :country, @countries.to_a.collect {|p| [p,p]} ) %>
+
+    <p>
+     <%= t('company.phone') %><br />
+     <%= f.text_field :phone %>
+    </p>
+    <p>
+     <%= t('company.fax') %><br />
+     <%= f.text_field :fax %>
+    </p>
+    <p>
+     <%= t('company.email') %><br />
+     <%= f.text_field :email %>
+    </p>
+
+    <% if action_name == 'new' %>
+    <%= f.submit t('company.create') %>
+    <% else %>
+    <%= f.submit t('company.edit') %>
+    <% end %>
 
 <% end %>
