- Partials   * added more data in 'faq'   * added new menu 'help'
- Locale
  * added new translations

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -166,6 +166,7 @@
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
           <li><a href="/users/<%= current_user.id %>/edit"><%= t 'menu.account_edit' %></a></li>
+          <li><a href="/users/help">Help</a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
