- Partial   * added new data to show there
- Locales
  * added new translation

--- a/app/views/shared/_faq.html.erb
+++ b/app/views/shared/_faq.html.erb
@@ -1,3 +1,4 @@
+<%= content_tag('h2', t('menu.workstations')) %>
 
 <% content_tag :div do %>
   <%= content_tag('b', t('faq.what_are_workstations_module')) %>
@@ -14,7 +15,19 @@
   <%= content_tag('p', t('faq.workstations_statistics_show')) %>
 <% end %>
 
+
+<%= content_tag('h2', t('menu.places')) %>
+
 <% content_tag :div do %>
   <%= content_tag('b', t('faq.what_is_places_module')) %>
   <%= content_tag('p', t('faq.place_module_is')) %>
 <% end %>
+
+<% content_tag :div do %>
+  <%= content_tag('b', t('faq.what_can_i_do_there')) %>
+  <%= content_tag('p', t('faq.there_you_can')) %>
+<% end %>
+
+
+
+<%= content_tag('h2', 'Hardware') %>
