- Controllers   * added before_filter :countries for companies controller
- Model
  * added new validations over  :street, :number, :city, :country
    and delete validation for :fax

- Partial
  * some changes to show

- Locales
  * added new translation

- Library
  * little change putting Argentina country first in the list

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -5,14 +5,25 @@
      <%= t('company.name') %><br />
      <%= f.text_field :name %>
     </p>
-    <p>
-     <%= t('company.address') %><br />
-     <%= f.text_field :street %>
-     <%= f.text_field :number %>
-     <%= f.text_field :city %>
-    </p>
+     <% content_tag :div, :id => 'quarter'  do %>
+       <%= t('company.street') %>
+       <%= f.text_field :street %>
 
-    <%= select(:company, :country, @countries.to_a.collect {|p| [p,p]} ) %>
+       <%= content_tag('br') %>
+
+       <%= t('company.number') %>
+       <%= f.text_field :number %>
+
+       <%= content_tag('br') %>
+
+       <%= t('company.city') %>
+       <%= f.text_field :city %>
+
+       <%= content_tag('br') %>
+
+       <%= t('company.country') %>
+       <%= select(:company, :country, @countries.to_a.collect {|p| [p,p]} ) %>
+    <% end %>
 
     <p>
      <%= t('company.phone') %><br />
