--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -8,7 +8,7 @@
 
 h1,h2,h3,h4,h5,h6
 {
-    color: #444;
+    color: #000;
 }
 
 body,input
@@ -626,25 +626,32 @@ div.auto_complete ul strong.highlight {
 
 .advice
 {
-border: 1px solid #aaffaa;
-background-color: #ddffdd;
-background-image: none;
-background-repeat: repeat;
-background-attachment: scroll;
-background-position: 0% 0%;
-padding-top: 0.2em;
-padding-right: 0.2em;
-padding-bottom: 0.2em;
-padding-left: 0.2em;
-width: 100%;
-border-top-width: 1px;
-border-right-width: 1px;
-border-bottom-width: 1px;
-border-left-width: 1px;
-border-top-style: solid;
-border-right-style-value: solid;
-border-bottom-style: solid;
-border-left-style-value: solid;
+    border: 1px solid #aaffaa;
+    background-color: #ddffdd;
+    background-image: none;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    padding-top: 0.2em;
+    padding-right: 0.2em;
+    padding-bottom: 0.2em;
+    padding-left: 0.2em;
+    width: 100%;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-style: solid;
+    border-right-style-value: solid;
+    border-bottom-style: solid;
+    border-left-style-value: solid;
+}
+
+.identation_help
+{
+    padding-left: 1.2em;
+    padding-top: 0.3em;
+    font-size: 10pt;
 }
 
 
