--- a/app/views/shared/_faq.html.erb
+++ b/app/views/shared/_faq.html.erb
@@ -65,5 +65,16 @@
   <%= content_tag('p', t('faq.in_motherboards_has'), :class => 'identation_help') %>
 <% end %>
 
+
+<% content_tag :div do %>
+  <%= content_tag('b', ' - ' + t('faq.what_in_submodule_harddisks'), :class => 'identation_help') %>
+  <%= content_tag('p', t('faq.in_harddisks_has'), :class => 'identation_help') %>
+<% end %>
+
+<% content_tag :div do %>
+  <%= content_tag('b', ' - ' + t('faq.what_in_submodule_memories'), :class => 'identation_help') %>
+  <%= content_tag('p', t('faq.in_memories_has'), :class => 'identation_help') %>
+<% end %>
+
 <% end %>
 
