- Partial   * adding new help
- Locales
  * new translation

--- a/app/views/shared/_faq.html.erb
+++ b/app/views/shared/_faq.html.erb
@@ -76,5 +76,25 @@
   <%= content_tag('p', t('faq.in_memories_has'), :class => 'identation_help') %>
 <% end %>
 
+<% content_tag :div do %>
+  <%= content_tag('b', ' - ' + t('faq.what_in_submodule_cds'), :class => 'identation_help') %>
+  <%= content_tag('p', t('faq.in_cds_has'), :class => 'identation_help') %>
+<% end %>
+
+<% content_tag :div do %>
+  <%= content_tag('b', ' - ' + t('faq.what_in_submodule_dvds'), :class => 'identation_help') %>
+  <%= content_tag('p', t('faq.in_dvds_has'), :class => 'identation_help') %>
+<% end %>
+
+<% content_tag :div do %>
+  <%= content_tag('b', ' - ' + t('faq.what_in_submodule_screens'), :class => 'identation_help') %>
+  <%= content_tag('p', t('faq.in_screens_has'), :class => 'identation_help') %>
+<% end %>
+
+<% content_tag :div do %>
+  <%= content_tag('b', ' - ' + t('faq.what_in_submodule_printers'), :class => 'identation_help') %>
+  <%= content_tag('p', t('faq.in_printers_has'), :class => 'identation_help') %>
+<% end %>
+
 <% end %>
 
