- Controllers   * added new option for list method
- Model
  * added new named scope for places

- Partials
  * added new option for list selector of kinds of places

- Locales
  * added new translation

- Spec
  * fixed spec of views

--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -11,7 +11,7 @@
   <br>
   <div id="quarter" >
     <%= select( "place", "description", {t('places.departments') => "department",
-    t('places.offices') => "office", t('places.rooms') => "room", t('places.stores') => "store"},
+    t('places.offices') => "office", t('places.classrooms') => "classroom", t('places.rooms') => "room", t('places.stores') => "store"},
     { :prompt => true }) %>
   </div>
 </p>
