--- a/app/views/places/_selector_places_list.html.erb
+++ b/app/views/places/_selector_places_list.html.erb
@@ -7,6 +7,7 @@
    [t('places.departments'),'departments'],
    [t('places.offices'),'offices'],
    [t('places.rooms'),'rooms'],
+   [t('places.classrooms'),'classrooms'],
    [t('places.stores'),'stores']]
    %>
 
