- Partial   * adapting the partials to show the new field 'contact'
- View
 * adapting the views to show the new field 'contact'

- Locales
  * adding new translations

- Migrations
  * adding new migration to add contact field in companies
    table

- Schema
  * modified by changes of new field

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -21,6 +21,11 @@
 
        <%= content_tag('br') %>
 
+       <%= t('company.contact') %>
+       <%= f.text_field :contact, :value => '-' %>
+
+       <%= content_tag('br') %>
+
        <%= t('company.country') %>
        <%= select(:company, :country, @countries.to_a.collect {|p| [p,p]} ) %>
     <% end %>
