--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -18,6 +18,11 @@
 </p>
 
 <p>
+  <b><%= t('company.contact') %></b>
+    <%= @company.contact %>
+</p>
+
+<p>
   <b><%= t('company.fax') %></b>
   <%=h @company.fax %>
 </p>
