- Partials   * changes in a few sentences to examine the quantity     of records in the bill list   * change in list showed of companies   * changes in a few sentences to examine the quantity     of records in the computers, printers and screen list

--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -1,4 +1,4 @@
-<% if @bills.count > 0 %>
+<% if @bills.size > 0 %>
   <%= link_to t('common_actions.download'), :controller => 'bills',
   :action => 'xls' %> |
   <%= link_to  t('common_actions.download_pdf'), :controller => 'bills',
